# ferriscord

./: .env.example  Cargo.toml  Dockerfile  README.md  SETUP.md  docker-compose.yaml
.sqlx/: query-0155e0900e3566a697bfa596bbf72d5a6c3d88daf809053dcaf65a555553273e.json  query-24992a95c51ad5f79b15aa30585e0c2bcd6c04fe20e9a1cf6b1e4e98caba2b36.json  query-25c544e7214d31cf121d4ea20fc93b46580cc4dbe3ae718995844de46c8f572f.json  query-29c0477be55f90fc7625130a41a38dcfbbf6b66ce74f1df3b1f1d9e807ac0fbd.json  query-2c8044bbada5a620f8a98df13ed470a3c1c0b0c0b2b3aa54e9750bc7f1960090.json  query-329b143fd25804338637c555e0a6b624e6d3986e4ba20f1e350496091f87d8c5.json  query-37460be4d8fd1d7967b324d383070fa43979ab717ce54b8819c52f45c43dabb7.json  (+19 more)
.zed/: settings.json
api/: Cargo.toml
ferriscord-guild/api/: Cargo.toml
ferriscord-guild/api/src/: args.rs  main.rs  state.rs
ferriscord-guild/api/src/args/: database.rs
ferriscord-user/api/: Cargo.toml
ferriscord-user/api/src/: args.rs  main.rs  router.rs  state.rs
ferriscord-user/api/src/args/: log.rs
ferriscord-user/core/: Cargo.toml
ferriscord-user/core/.sqlx/: query-ece28e7ff9130225123d9915630256c6c17bfc32f5bdd8f531252a6fd70c9e74.json
ferriscord-user/core/src/: lib.rs
ferriscord-user/core/src/application/: mod.rs
ferriscord-user/core/src/domain/user/: mod.rs  ports.rs
libs/auth/: Cargo.toml
libs/auth/src/: lib.rs
libs/auth/src/domain/: identity.rs  mod.rs  model.rs  ports.rs
libs/auth/src/domain/models/: claims.rs  errors.rs  identity.rs  mod.rs  token.rs
libs/auth/src/infrastructure/: ferriskey_repository.rs  jwt_decoder.rs  keycloak_repository.rs  mod.rs
libs/core/: Cargo.toml
libs/core/src/: lib.rs
libs/core/src/crypto/domain/: ports.rs
libs/core/src/crypto/infrastructure/: postgres.rs
libs/core/src/guild/application/: mod.rs
libs/core/src/guild/domain/: errors.rs  mod.rs
libs/core/src/guild/domain/channel/: entities.rs  mod.rs  ports.rs  services.rs
libs/core/src/guild/domain/common/: mod.rs
libs/core/src/guild/domain/guild/: entities.rs  mod.rs  ports.rs  services.rs
libs/core/src/guild/domain/invite/: mod.rs  ports.rs  services.rs
libs/core/src/guild/domain/member/: ports.rs
libs/core/src/guild/domain/message/: mod.rs  ports.rs  services.rs
libs/core/src/guild/domain/role/: entities.rs  mod.rs  ports.rs  services.rs
libs/core/src/guild/infrastructure/: mod.rs
libs/core/src/guild/infrastructure/channel/: postgres.rs
libs/core/src/guild/infrastructure/guild/: postgres.rs
libs/core/src/guild/infrastructure/invite/: postgres.rs
libs/core/src/guild/infrastructure/member/: postgres.rs
libs/core/src/guild/infrastructure/message/: postgres.rs
libs/core/src/guild/infrastructure/role/: postgres.rs
libs/core/src/user/: mod.rs
libs/core/src/user/application/: mod.rs
libs/core/src/user/domain/: mod.rs
libs/core/src/user/domain/common/: mod.rs
libs/core/src/user/domain/dm/: mod.rs  ports.rs  services.rs
libs/core/src/user/domain/friend/: mod.rs  ports.rs  services.rs
libs/core/src/user/domain/user/: mod.rs  ports.rs  services.rs
libs/core/src/user/infrastructure/: mod.rs
libs/core/src/user/infrastructure/dm/: postgres.rs
libs/core/src/user/infrastructure/friend/: postgres.rs
libs/core/src/user/infrastructure/user/: postgres.rs
libs/entities/: Cargo.toml
libs/entities/src/: lib.rs
libs/entities/src/attachment/: mod.rs
libs/entities/src/channel/: mod.rs
libs/entities/src/crypto/: mod.rs
libs/entities/src/friendship/: mod.rs
libs/entities/src/guild/: mod.rs
libs/entities/src/invite/: mod.rs
libs/entities/src/member/: mod.rs
libs/entities/src/message/: mod.rs
libs/entities/src/role/: mod.rs
libs/entities/src/user/: mod.rs
libs/permission/: Cargo.toml
libs/permission/src/: lib.rs
libs/server/: Cargo.toml
libs/server/src/: args.rs  lib.rs
libs/server/src/args/: auth.rs  database.rs  storage.rs
libs/server/src/http/: mod.rs  response.rs
libs/storage/: Cargo.toml
libs/storage/src/: client.rs  error.rs  lib.rs  port.rs
services/guild-service/api/: Cargo.toml
services/guild-service/api/.sqlx/: query-3a9581068e2ed681049588e7383ea34e3a73962af04ad8f082ca5033cb3eb881.json
services/guild-service/api/src/: args.rs  auth.rs  main.rs  openapi.rs  router.rs  state.rs
services/guild-service/api/src/handlers/: create_guild.rs  create_role.rs  delete_guild.rs  delete_role.rs  get_role.rs  get_roles.rs  mod.rs
services/guild-service/core/: Cargo.toml
services/guild-service/core/.sqlx/: query-38615e63591e5e17544cfc9ce7f5c5086d0194fb8d885f77e7450cae7f802978.json  query-4c17fa6846d2f4e92c893e82529f56c1c772648bdeee75ec43f3f8e7ed0c3946.json  query-b27adda40e60995957ebeb96d86a493fb937db313120d272a5a5b1bc58d780fd.json
services/guild-service/core/migrations/: 20250926010100_init_guilds.down.sql  20250926010100_init_guilds.up.sql  20250926011825_add_roles.up.sql  20250926011831_add_members.down.sql  20250926011831_add_members.up.sql
services/guild-service/core/src/application/: mod.rs
services/guild-service/core/src/domain/: errors.rs  mod.rs
services/guild-service/core/src/domain/common/: mod.rs
services/guild-service/core/src/domain/guild/: entities.rs  ports.rs  services.rs
services/guild-service/core/src/domain/member/: ports.rs
services/guild-service/core/src/domain/role/: entities.rs  ports.rs  services.rs
services/guild-service/core/src/infrastructure/guild/: postgres.rs
services/guild-service/core/src/infrastructure/role/: postgres.rs
services/message-service/core/: Cargo.toml
services/notification-service/core/: Cargo.toml
services/notification-service/core/src/domain/: entities.rs  events.rs  mod.rs
services/notification-service/core/src/domain/entities/: notification.rs  preference.rs  user_notification.rs
services/notification-service/core/src/domain/ports/: mod.rs
services/user-service/api/: .env  Cargo.toml
services/user-service/api/src/: args.rs  main.rs  openapi.rs  router.rs  state.rs
services/user-service/api/src/args/: database.rs
services/user-service/api/src/handlers/: get_user_guilds.rs  mod.rs
(+294 files in other folders)
