[workspace]
members = [
    "libs/errors",
    "libs/server",
    "libs/auth",
    "libs/config",
    "libs/permission",
    "libs/pagination",
    "libs/entities",
    "libs/core",
    "libs/storage",

    "api",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["nathael <pro.nathaelbonnal@gmail.com>"]
license = "Apache-2.0"
