[package]
name = "ferriscord-guild-api"
description = "FerrisCord Guild API"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["env", "derive"] }
dotenv = "0.15.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.7"
