[package]
name = "ferriscord-auth"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
