[package]
name = "ferriscord-core"
description = "Core business logic for FerrisCord"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "ferriscord_core"
path = "src/lib.rs"

[dependencies]
ferriscord-auth = { path = "../auth" }
ferriscord-config = { path = "../config" }
ferriscord-permission = { path = "../permission" }
ferriscord-pagination = { path = "../pagination" }
ferriscord-entities = { path = "../entities" }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
