[package]
name = "ferriscord-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ferriscord-config = { path = "../config" }
ferriscord-auth = { path = "../auth" }
ferriscord-error = { path = "../errors" }
axum = "0.8.6"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
rustls = "0.23.33"
tracing = "0.1.41"
url = "2.5.7"
serde = "1.0.228"
axum-extra = { version = "0.10.3", features = ["typed-header"] }
