[package]
name = "guild-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "guild-service"
path = "src/main.rs"

[dependencies]
ferriscord-error = { path = "../../../libs/errors" }
ferriscord-server = { path = "../../../libs/server" }
guild-core = { path = "../core" }
clap = { version = "4.5.48", features = ["env", "derive"] }
dotenv = "0.15.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.7"
