[package]
name = "notification-core"
description = "Core business logic library for FerrisCord Notification Service"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "notification_core"
path = "src/lib.rs"

[dependencies]
ferriscord-domain = { path = "../../../libs/ferriscord-domain" }
chrono = { version = "0.4.42", features = ["serde"] }
serde = "1.0.228"
uuid = { version = "1.18.1", features = ["serde"] }
serde_json = "1.0.145"
